--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "lint": "expo lint"
   },
   "dependencies": {
-  "@react-native-async-storage/async-storage": "^1.19.0",
     "@expo/vector-icons": "^15.0.3",
+    "@gluestack-ui/config": "^1.1.20",
+    "@gluestack-ui/themed": "^1.1.73",
+    "@react-native-aria/dialog": "^0.0.5",
+    "@react-native-aria/focus": "^0.2.9",
+    "@react-native-aria/interactions": "^0.2.16",
+    "@react-native-aria/overlays": "^0.3.15",
+    "@react-native-aria/utils": "^0.2.12",
+    "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
